Batch export of STL-files incorrect handling of .stl-suffix #120253

Closed
opened 2024-04-04 13:53:32 +02:00 by Markus Kruse · 3 comments

System Information
Operating system: Windows 11
Graphics card: Nvidia Geforce RTX2080 Super

Blender Version
Broken: 4.1
Worked: Legacy STL-export works

When batch exporting exporting to STL-files, the .stl-suffix prefixes the filename unless it is cleared.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • Select default cube.
  • File -> export -> STL
  • Clear filename
  • Check "Selection only"
  • Check "Batch"
  • Click "Export STL"

The exported file will now be called ".stlcube.stl" instead of "cube.stl".

A workaround is to clear the filename after Batch and Selection only is checked.

In the legacy exporter, following the same steps, the exported filename is "cube.stl".

**System Information** Operating system: Windows 11 Graphics card: Nvidia Geforce RTX2080 Super **Blender Version** Broken: 4.1 Worked: Legacy STL-export works When batch exporting exporting to STL-files, the .stl-suffix prefixes the filename unless it is cleared. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). - Select default cube. - File -> export -> STL - Clear filename - Check "Selection only" - Check "Batch" - Click "Export STL" The exported file will now be called ".stlcube.stl" instead of "cube.stl". A workaround is to clear the filename after Batch and Selection only is checked. In the legacy exporter, following the same steps, the exported filename is "cube.stl".
Markus Kruse added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-04-04 13:53:33 +02:00
Member

Well... Looks like in current stl exporter, the name will be automatically filled with .stl if batch option isn't set, while the old exporter doesn't care.

Maybe there can be a quality of life improvement there when the name has .stl suffix and batch option is turned on, it will automatically clear the suffix?

@aras_p maybe of your interest?

Well... Looks like in current stl exporter, the name will be automatically filled with `.stl` if batch option isn't set, while the old exporter doesn't care. Maybe there can be a quality of life improvement there when the name has `.stl` suffix and batch option is turned on, it will automatically clear the suffix? @aras_p maybe of your interest?
YimingWu added
Module
Pipeline, Assets & IO
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-05 06:25:55 +02:00
Aras Pranckevicius self-assigned this 2024-04-05 12:54:40 +02:00
Author

A bit of clarification (not sure it is needed but anyhow):

The filename text field is populated with ".stl" when "Selection only" or "Batch" is checked, even if it was empty before. This population is probably the only thing that needs changing. Let me know if I can be of assistance.

A bit of clarification (not sure it is needed but anyhow): The filename text field is populated with ".stl" when "Selection only" or "Batch" is checked, even if it was empty before. This population is probably the only thing that needs changing. Let me know if I can be of assistance.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-11 10:08:10 +02:00

While not new in this report, using object names in file-paths could include characters / and \ which won't work properly. Submitting a PR to resolve !120515.

While not new in this report, using object names in file-paths could include characters `/` and `\` which won't work properly. Submitting a PR to resolve !120515.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120253
No description provided.